compiler/tools/fpp-check/test/spec_loc/constant_dictionary_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/constant_dictionary_error.fpp:1.1
locate constant c at "constant_dictionary_error.fpp"
^
error: incorrect location specifier
actual definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/constant_dictionary_error.fpp:2.1
dictionary constant c = 0
^
note: one specifies dictionary and one does not
